--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react-refresh": "^0.3.5",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.11"
-  }
+    "vite": "^5.0.10"
+  },
+  "packageManager": "yarn@4.0.2"
 }
