--- a/package.json
+++ b/package.json
@@ -11,28 +11,29 @@
   },
   "dependencies": {
     "@cloudinary/react": "^1.11.2",
-    "@cloudinary/url-gen": "^1.11.2",
-    "@stripe/react-stripe-js": "^2.3.0",
-    "@stripe/stripe-js": "^2.1.6",
-    "axios": "^1.4.0",
-    "date-fns": "^2.30.0",
+    "@cloudinary/url-gen": "^1.14.0",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.2",
+    "axios": "^1.6.2",
+    "date-fns": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.12.0",
     "react-multi-carousel": "^2.8.4",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.4",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.47.0",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.5",
-    "postcss": "^8.4.28",
-    "tailwindcss": "^3.3.3",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3",
     "vite": "^5.0.10"
   },
   "packageManager": "yarn@4.0.2"
