--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.2",
     "axios": "^1.6.2",
+    "clsx": "^2.0.0",
     "date-fns": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.21.0",
+    "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
