--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-multi-carousel": "^2.8.4",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "6.21.1",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4"
   },
